--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
